Major shift to a files service that is spec produced
