# api/openapi.yaml
@@ -29,6 +29,8 @@ paths:
         name: subscription_id
         required: false
         schema:
+          example: 9bsv0s09a5j002njlpvg
+          pattern: '[0-9a-z_-]{3,20}'
           type: string
         style: form
       - description: filters the files by the grouping id
@@ -37,6 +39,8 @@ paths:
         name: group_id
         required: false
         schema:
+          example: 9bsv0s09a5j002njlptg
+          pattern: '[0-9a-z_-]{3,20}'
           type: string
         style: form
       - description: maximum number of results to return
@@ -45,11 +49,18 @@ paths:
         name: limit
         required: false
         schema:
-          format: int32
+          type: integer
+        style: form
+      - description: maximum number of results to return
+        explode: true
+        in: query
+        name: page
+        required: false
+        schema:
           type: integer
         style: form
       responses:
-        200:
+        "200":
           content:
             application/json:
               schema:
@@ -57,7 +68,7 @@ paths:
                   $ref: '#/components/schemas/File'
                 type: array
           description: files response
-        401:
+        "401":
           $ref: '#/components/responses/UnauthorizedError'
         default:
           content:
@@ -78,12 +89,18 @@ paths:
             schema:
               properties:
                 group_id:
+                  example: 9bsv0s09a5j002njlpvg
+                  pattern: '[0-9a-z_-]{3,20}'
                   type: string
-                subscription_id:
+                access_id:
+                  example: 9bsv0s09a5j002njlptg
+                  pattern: '[0-9a-z_-]{3,20}'
                   type: string
                 public:
+                  default: false
                   type: boolean
                 name:
+                  example: uploadfile.txt
                   type: string
                 fileObject:
                   format: binary
@@ -91,13 +108,13 @@ paths:
               type: object
         description: File contents to add to the store
       responses:
-        200:
+        "200":
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/File'
           description: file response
-        401:
+        "401":
           $ref: '#/components/responses/UnauthorizedError'
         default:
           content:
@@ -118,12 +135,14 @@ paths:
         name: id
         required: true
         schema:
+          example: 9bsv0s09a5j002njlq20
+          pattern: '[0-9a-z_-]{3,20}'
           type: string
         style: simple
       responses:
-        204:
+        "204":
           description: file deleted
-        401:
+        "401":
           $ref: '#/components/responses/UnauthorizedError'
         default:
           content:
@@ -143,16 +162,19 @@ paths:
         name: id
         required: true
         schema:
+          example: 9bsv0s09a5j002njlq30
+          pattern: '[0-9a-z_-]{3,20}'
           type: string
         style: simple
       responses:
-        200:
+        "200":
           content:
+            application/octet-stream:
               schema:
-                type: string
                 format: binary
+                type: string
           description: file response
-        401:
+        "401":
           $ref: '#/components/responses/UnauthorizedError'
         default:
           content:
@@ -172,10 +194,10 @@ components:
   schemas:
     File:
       example:
-        subscription_id: subscription_id
         public: true
         group_id: group_id
         name: name
+        access_id: access_id
         id: id
         url: url
       properties:
@@ -183,7 +205,7 @@ components:
           type: string
         group_id:
           type: string
-        subscription_id:
+        access_id:
           type: string
         public:
           type: boolean
@@ -208,14 +230,25 @@ components:
     inline_object:
       properties:
         group_id:
+          example: 9bsv0s09a5j002njlpvg
+          pattern: '[0-9a-z_-]{3,20}'
           type: string
-        subscription_id:
+        access_id:
+          example: 9bsv0s09a5j002njlptg
+          pattern: '[0-9a-z_-]{3,20}'
           type: string
         public:
+          default: false
           type: boolean
         name:
+          example: uploadfile.txt
           type: string
         fileObject:
           format: binary
           type: string
       type: object
+  securitySchemes:
+    bearerAuth:
+      bearerFormat: JWT
+      scheme: bearer
+      type: http
