# openapi/api_default_service.go
@@ -1,0 +1,98 @@
+/*
+ * Ant Investor Files
+ *
+ * An openAPI 3.0 specification that defines how files are stored and accessed on ant investor products
+ *
+ * API version: 1.0.0
+ * Contact: info@antinvestor.com
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package openapi
+
+import (
+	"context"
+	"errors"
+	"mime/multipart"
+	"net/http"
+)
+
+// DefaultApiService is a service that implents the logic for the DefaultApiServicer
+// This service should implement the business logic for every endpoint for the DefaultApi API. 
+// Include any external packages or services that will be required by this service.
+type DefaultApiService struct {
+}
+
+// NewDefaultApiService creates a default api service
+func NewDefaultApiService() DefaultApiServicer {
+	return &DefaultApiService{}
+}
+
+// AddFile - 
+func (s *DefaultApiService) AddFile(ctx context.Context, groupId string, accessId string, public bool, name string, fileHeader *multipart.FileHeader) (ImplResponse, error) {
+	// TODO - update AddFile with the required logic for this service method.
+	// Add api_default_service.go to the .openapi-generator-ignore to avoid overwriting this service implementation when updating open api generation.
+
+	//TODO: Uncomment the next line to return response Response(200, File{}) or use other options such as http.Ok ...
+	//return Response(200, File{}), nil
+
+	//TODO: Uncomment the next line to return response Response(401, {}) or use other options such as http.Ok ...
+	//return Response(401, nil),nil
+
+	//TODO: Uncomment the next line to return response Response(0, Error{}) or use other options such as http.Ok ...
+	//return Response(0, Error{}), nil
+
+	return Response(http.StatusNotImplemented, nil), errors.New("AddFile method not implemented")
+}
+
+// DeleteFile - 
+func (s *DefaultApiService) DeleteFile(ctx context.Context, id string) (ImplResponse, error) {
+	// TODO - update DeleteFile with the required logic for this service method.
+	// Add api_default_service.go to the .openapi-generator-ignore to avoid overwriting this service implementation when updating open api generation.
+
+	//TODO: Uncomment the next line to return response Response(204, {}) or use other options such as http.Ok ...
+	//return Response(204, nil),nil
+
+	//TODO: Uncomment the next line to return response Response(401, {}) or use other options such as http.Ok ...
+	//return Response(401, nil),nil
+
+	//TODO: Uncomment the next line to return response Response(0, Error{}) or use other options such as http.Ok ...
+	//return Response(0, Error{}), nil
+
+	return Response(http.StatusNotImplemented, nil), errors.New("DeleteFile method not implemented")
+}
+
+// FindFileById - 
+func (s *DefaultApiService) FindFileById(ctx context.Context, id string) (ImplResponse, error) {
+	// TODO - update FindFileById with the required logic for this service method.
+	// Add api_default_service.go to the .openapi-generator-ignore to avoid overwriting this service implementation when updating open api generation.
+
+	//TODO: Uncomment the next line to return response Response(200, *os.File{}) or use other options such as http.Ok ...
+	//return Response(200, *os.File{}), nil
+
+	//TODO: Uncomment the next line to return response Response(401, {}) or use other options such as http.Ok ...
+	//return Response(401, nil),nil
+
+	//TODO: Uncomment the next line to return response Response(0, Error{}) or use other options such as http.Ok ...
+	//return Response(0, Error{}), nil
+
+	return Response(http.StatusNotImplemented, nil), errors.New("FindFileById method not implemented")
+}
+
+// FindFiles - 
+func (s *DefaultApiService) FindFiles(ctx context.Context, subscriptionId string, groupId string, limit int32, page int32) (ImplResponse, error) {
+	// TODO - update FindFiles with the required logic for this service method.
+	// Add api_default_service.go to the .openapi-generator-ignore to avoid overwriting this service implementation when updating open api generation.
+
+	//TODO: Uncomment the next line to return response Response(200, []File{}) or use other options such as http.Ok ...
+	//return Response(200, []File{}), nil
+
+	//TODO: Uncomment the next line to return response Response(401, {}) or use other options such as http.Ok ...
+	//return Response(401, nil),nil
+
+	//TODO: Uncomment the next line to return response Response(0, Error{}) or use other options such as http.Ok ...
+	//return Response(0, Error{}), nil
+
+	return Response(http.StatusNotImplemented, nil), errors.New("FindFiles method not implemented")
+}
+
