# service/models/models.go
@@ -1,8 +1,6 @@
 package models
 
 import (
-	"fmt"
-	"github.com/antinvestor/files/openapi"
 	"github.com/pitabwire/frame"
 )
 
@@ -10,8 +8,8 @@ import (
 type File struct {
 	frame.BaseModel
 
-	GroupID        string `gorm:"type:varchar(50)"`
-	SubscriptionID string `gorm:"type:varchar(50)"`
+	GroupID  string `gorm:"type:varchar(50)"`
+	AccessID string `gorm:"type:varchar(50)"`
 
 	Name string `gorm:"type:varchar(250)"`
 	Ext  string `gorm:"type:varchar(10)"`
@@ -24,29 +22,13 @@ type File struct {
 	BucketName   string `gorm:"type:varchar(255)"`
 	Provider     string `gorm:"type:varchar(50)"`
 	UploadResult string `gorm:"type:varchar(255)"`
-
 }
 
-func (file *File) ToApi(fileAccessServer string) openapi.File {
-
-	fileUrl := fmt.Sprintf("%s/%s", fileAccessServer, file.ID)
-
-	return openapi.File{
-		Id:             file.ID,
-		Name:           file.Name,
-		Public:         file.Public,
-		GroupId:        file.GroupID,
-		SubscriptionId: file.SubscriptionID,
-		Url:            fileUrl,
-	}
-}
-
-// AuditFile model responsible for holding events on a file
-type AuditFile struct {
+// FileAudit model responsible for holding events on a file
+type FileAudit struct {
 	frame.BaseModel
-	FileID         string `gorm:"type:varchar(50)"`
-	SubscriptionID string `gorm:"type:varchar(50)"`
-	Action         string `gorm:"type:varchar(250)"`
-	Source         string `gorm:"type:varchar(50)"`
-
+	FileID   string `gorm:"type:varchar(50)"`
+	AccessID string `gorm:"type:varchar(50)"`
+	Action   string `gorm:"type:varchar(250)"`
+	Source   string `gorm:"type:varchar(50)"`
 }
